*fixed collapseSection jittering

--- a/css/card.css
+++ b/css/card.css
@@ -63,9 +63,9 @@
     margin-right: 0;
     margin-left: 0;
     margin-top: 5vh;
-    margin-bottom: 5vh;
+    margin-bottom: 10vh;
     border-radius: 0;
-    animation: sectionGrow .4s ease-in-out;
+    /* animation: sectionGrow .15s ease-in-out; */
 }
 
 .sectionShrink {
@@ -79,7 +79,7 @@
     align-items: center;
     justify-content: center;
     overflow: visible;
-    animation: sectionShrink .15s ease-in-out;
+    /* animation: sectionShrink .15s ease-in-out; */
 }
 
 @keyframes titleGrow {
@@ -161,17 +161,23 @@
     }
 }
 
-@keyframes sectionShrink {
-    0%{
+/* @keyframes sectionShrink {
+    0% {
         height: 100%;
         border-radius: 0vw;
         margin-right: 0%;
         margin-left: 0%;
     }
-    100%{
+    5% {
+        height: 100%;
+        border-radius: 0vw;
+        margin-right: 0%;
+        margin-left: 0%;
+    }
+    100% {
         height: 76vh;
         border-radius: 10vw;
         margin-right: 3%;
         margin-left: 3%;
     }
-}
+} */
