--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,7 @@
     justify-content: center;
     overflow: visible;
     animation: sectionSlide .4s ease-in-out;
+    transition: height 0.15s ease-in-out, margin 0.15s ease-in-out, border-radius 0.15s ease-in-out;
 }
 
 #section4 {
